--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -78,6 +78,7 @@ jobs:
         name: Release ${{ env.VERSION }}
         body: |
           This release contains the following:
+          - Built OS: `Linux`
           - Built file: `tasa`
           - Build Type: ${{ env.BUILD_TYPE }}
         draft: true  # Set to false if you want it published immediately
