--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Build executable
       shell: pwsh
       run: |
-        mkdir build\windows
+        mkdir -p build\windows
         nuitka --standalone --onefile --output-dir=build\windows --output-filename=tasa.exe src\gui.py `
           --include-data-files=src\low.png=low.png
 
@@ -80,7 +80,6 @@ jobs:
         name: Release ${{ env.VERSION }}
         body: |
           This release contains the following:
-          - Built OS: `Windows`
-          - Built file: `tasa.exe`
-          - Build Type: ${{ env.BUILD_TYPE }}
+            - Built file: `tasa.exe`
+            - Build Type: ${{ env.BUILD_TYPE }}
         draft: true  # Set to false if you want it published immediately
