--- a/.github/workflows/build_linux_win.yml
+++ b/.github/workflows/build_linux_win.yml
@@ -19,6 +19,7 @@ jobs:
     outputs:
       VERSION: ${{ steps.get_version.outputs.VERSION }}
       BUILD_TYPE: ${{ steps.get_version.outputs.BUILD_TYPE }}
+      SAFE_VERSION: ${{ steps.get_version.outputs.SAFE_VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -50,8 +51,12 @@ jobs:
             exit 1
           fi
 
+          # Create a sanitized version for filenames, replacing '.' with '_'
+          SAFE_VERSION=$(echo "${VERSION}" | tr '.' '_')
+
           echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
           echo "BUILD_TYPE=${BUILD_TYPE}" >> $GITHUB_OUTPUT
+          echo "SAFE_VERSION=${SAFE_VERSION}" >> $GITHUB_OUTPUT
 
   build-windows:
     runs-on: windows-latest
@@ -59,6 +64,7 @@ jobs:
     env:
       VERSION: ${{ needs.versioning.outputs.VERSION }}
       BUILD_TYPE: ${{ needs.versioning.outputs.BUILD_TYPE }}
+      SAFE_VERSION: ${{ needs.versioning.outputs.SAFE_VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -72,19 +78,31 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install nuitka
+          pip install nuitka pillow
+        shell: cmd
+
+      - name: Convert PNG to ICO
+        run: |
+          python -c "from PIL import Image; Image.open('src/low.png').save('src/low.ico')"
+        shell: cmd
 
       - name: Build executable
         run: |
           mkdir build
-          nuitka --standalone --onefile --output-dir=build/windows --output-filename=tasa.exe src/gui.py `
-            --include-data-files=src/low.png=low.png --assume-yes-for-downloads
-
+          nuitka --standalone --onefile ^
+            --output-dir=build/windows ^
+            --output-filename=tasa-${{ env.SAFE_VERSION }}.exe ^
+            src/gui.py ^
+            --include-data-files=src/low.png=low.png ^
+            --windows-icon-from-ico=src/low.ico ^
+            --assume-yes-for-downloads
+        shell: cmd
+      
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: tasa-windows
-          path: build/windows/tasa.exe
+          path: build/windows/tasa-${{ env.SAFE_VERSION }}.exe
 
   build-linux:
     runs-on: ubuntu-latest
@@ -92,6 +110,7 @@ jobs:
     env:
       VERSION: ${{ needs.versioning.outputs.VERSION }}
       BUILD_TYPE: ${{ needs.versioning.outputs.BUILD_TYPE }}
+      SAFE_VERSION: ${{ needs.versioning.outputs.SAFE_VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -103,6 +122,11 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo apt-get update
+          # For building .deb with fpm
+          sudo apt-get install -y ruby-full
+          sudo gem install --no-document fpm
+
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install nuitka
@@ -110,14 +134,56 @@ jobs:
       - name: Build executable
         run: |
           mkdir -p build/linux
-          nuitka --standalone --onefile --output-dir=build/linux --output-filename=tasa src/gui.py \
-            --include-data-files=src/low.png=low.png --assume-yes-for-downloads
+          nuitka --standalone --onefile \
+            --output-dir=build/linux \
+            --output-filename=tasa-${{ env.SAFE_VERSION }} \
+            src/gui.py \
+            --include-data-files=src/low.png=low.png \
+            --assume-yes-for-downloads
+
+      - name: Prepare package root
+        run: |
+          # 1) Copy the binary into /usr/local/bin
+          mkdir -p pkgroot/usr/local/bin
+          cp build/linux/tasa-${{ env.SAFE_VERSION }} pkgroot/usr/local/bin/tasa
+          chmod +x pkgroot/usr/local/bin/tasa
+
+          # 2) Place the .desktop file in /usr/share/applications
+          mkdir -p pkgroot/usr/share/applications
+          cat > pkgroot/usr/share/applications/tasa.desktop <<EOF
+          [Desktop Entry]
+          Name=Tasa
+          Exec=tasa
+          Icon=tasa
+          Type=Application
+          Categories=Utility;
+          EOF
+
+          # 3) Place the icon in /usr/share/pixmaps
+          mkdir -p pkgroot/usr/share/pixmaps
+          cp src/low.png pkgroot/usr/share/pixmaps/tasa.png
+
+      - name: Build .deb
+        run: |
+          # Build a deb package with fpm
+          fpm \
+            -s dir \
+            -t deb \
+            -n tasa \
+            -v "${{ env.VERSION }}" \
+            --iteration 1 \
+            --architecture amd64 \
+            -C pkgroot .
+          # Rename for consistency using the SAFE_VERSION
+          mv tasa_${{ env.VERSION }}-1_amd64.deb build/linux/tasa-${{ env.SAFE_VERSION }}.deb
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: tasa-linux
-          path: build/linux/tasa
+          path: |
+            build/linux/tasa-${{ env.SAFE_VERSION }}
+            build/linux/tasa-${{ env.SAFE_VERSION }}.deb
 
   tag_and_release:
     runs-on: ubuntu-latest
@@ -156,14 +222,18 @@ jobs:
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: |
-            artifacts/tasa-windows/tasa.exe
-            artifacts/tasa-linux/tasa
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: v${{ needs.versioning.outputs.VERSION }}
           name: Release v${{ needs.versioning.outputs.VERSION }}
           body: |
             This release contains the following:
-              - Built files: tasa.exe (Windows), tasa (Linux)
-              - Build Type: ${{ needs.versioning.outputs.BUILD_TYPE }}
-          draft: true  # Set to false if you want it published immediately
+            - Built files for Windows (tasa-${{ needs.versioning.outputs.SAFE_VERSION }}.exe)
+            - Built files for Linux:
+              - Standalone binary (tasa-${{ needs.versioning.outputs.SAFE_VERSION }})
+              - Debian package (tasa-${{ needs.versioning.outputs.SAFE_VERSION }}.deb)
+            - Build Type: ${{ needs.versioning.outputs.BUILD_TYPE }}
+          draft: true
+          artifacts: |
+            artifacts/tasa-windows/tasa-${{ needs.versioning.outputs.SAFE_VERSION }}.exe
+            artifacts/tasa-linux/tasa-${{ needs.versioning.outputs.SAFE_VERSION }}
+            artifacts/tasa-linux/tasa-${{ needs.versioning.outputs.SAFE_VERSION }}.deb
