--- a/.github/workflows/build_linux_win.yml
+++ b/.github/workflows/build_linux_win.yml
@@ -72,13 +72,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install nuitka
+          pip install nuitka pillow
+
+      - name: Convert PNG to ICO
+        run: |
+          python -c "from PIL import Image; Image.open('src/low.png').save('src/low.ico')"
 
       - name: Build executable
         run: |
           mkdir build
           nuitka --standalone --onefile --output-dir=build/windows --output-filename=tasa.exe src/gui.py `
-            --include-data-files=src/low.png=low.png --assume-yes-for-downloads
+            --include-data-files=src/low.png=low.png --windows-icon-from-ico=src/low.ico --assume-yes-for-downloads
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -112,6 +116,17 @@ jobs:
           mkdir -p build/linux
           nuitka --standalone --onefile --output-dir=build/linux --output-filename=tasa src/gui.py \
             --include-data-files=src/low.png=low.png --assume-yes-for-downloads
+
+      - name: Create Linux Desktop Entry
+        run: |
+          mkdir -p ~/.local/share/applications
+          echo "[Desktop Entry]
+          Name=Tasa
+          Exec=$PWD/build/linux/tasa
+          Icon=$PWD/src/low.png
+          Type=Application
+          Categories=Utility;" > ~/.local/share/applications/tasa.desktop
+          chmod +x ~/.local/share/applications/tasa.desktop
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
