test: include version info as params

--- a/.github/workflows/build_linux_win.yml
+++ b/.github/workflows/build_linux_win.yml
@@ -78,23 +78,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install --upgrade --pre nuitka
+          pip install nuitka
         shell: cmd
-
-      - name: Create Windows version info
-        shell: pwsh
-        run: |
-          $json = @{
-            "CompanyName" = "Tasa"
-            "FileDescription" = "Tasa"
-            "FileVersion" = "${{ env.VERSION }}"
-            "InternalName" = "Tasa"
-            "LegalCopyright" = "RIA (C) 2025"
-            "OriginalFilename" = "tasa-${{ env.SAFE_VERSION }}.exe"
-            "ProductName" = "Tasa"
-            "ProductVersion" = "${{ env.VERSION }}"
-          } | ConvertTo-Json
-          Set-Content -Path version.json -Value $json
 
       - name: Build executable
         run: |
@@ -108,9 +93,14 @@ jobs:
             --windows-icon-from-ico=src/low.ico ^
             --assume-yes-for-downloads ^
             --windows-console-mode=disable ^
-            --windows-version-info=version.json
+            --company-name="RIA" ^
+            --product-name="TASA" ^
+            --file-version="${{ env.VERSION }}" ^
+            --product-version="${{ env.VERSION }}" ^
+            --file-description="TASA rakendus" ^
+            --copyright="RIA" ^
+            --trademarks="RIA"
         shell: cmd
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -121,11 +111,13 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: quay.io/pypa/manylinux_2_34_x86_64:latest
+
     needs: versioning
     env:
       VERSION: ${{ needs.versioning.outputs.VERSION }}
       BUILD_TYPE: ${{ needs.versioning.outputs.BUILD_TYPE }}
       SAFE_VERSION: ${{ needs.versioning.outputs.SAFE_VERSION }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -134,8 +126,10 @@ jobs:
         run: |
           yum install -y \
             python3 python3-devel python3-pip \
-            ruby ruby-devel make gcc gcc-c++
+            ruby ruby-devel make gcc gcc-c++ \
+
           gem install --no-document fpm
+
           pip3 install --upgrade pip
           pip3 install -r requirements.txt
           pip3 install nuitka
@@ -155,6 +149,7 @@ jobs:
           mkdir -p pkgroot/usr/local/bin
           cp build/linux/tasa-${{ env.SAFE_VERSION }} pkgroot/usr/local/bin/tasa
           chmod +x pkgroot/usr/local/bin/tasa
+
           mkdir -p pkgroot/usr/share/applications
           cat > pkgroot/usr/share/applications/tasa.desktop <<EOF
           [Desktop Entry]
@@ -164,6 +159,7 @@ jobs:
           Type=Application
           Categories=Utility;
           EOF
+
           mkdir -p pkgroot/usr/share/pixmaps
           cp src/low.png pkgroot/usr/share/pixmaps/tasa.png
 
