--- a/.github/workflows/build_linux_win.yml
+++ b/.github/workflows/build_linux_win.yml
@@ -20,6 +20,7 @@ jobs:
       VERSION: ${{ steps.get_version.outputs.VERSION }}
       BUILD_TYPE: ${{ steps.get_version.outputs.BUILD_TYPE }}
       SAFE_VERSION: ${{ steps.get_version.outputs.SAFE_VERSION }}
+      FILE_VERSION: ${{ steps.get_version.outputs.FILE_VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -54,9 +55,13 @@ jobs:
           # Create a sanitized version for filenames, replacing '.' with '_'
           SAFE_VERSION=$(echo "${VERSION}" | tr '.' '_')
 
+          # Create a numeric file version (tuple of 4 integers)
+          FILE_VERSION="${YEAR}.${WEEK}.${Z}.0"
+
           echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
           echo "BUILD_TYPE=${BUILD_TYPE}" >> $GITHUB_OUTPUT
           echo "SAFE_VERSION=${SAFE_VERSION}" >> $GITHUB_OUTPUT
+          echo "FILE_VERSION=${FILE_VERSION}" >> $GITHUB_OUTPUT
 
   build-windows:
     runs-on: windows-latest
@@ -65,6 +70,7 @@ jobs:
       VERSION: ${{ needs.versioning.outputs.VERSION }}
       BUILD_TYPE: ${{ needs.versioning.outputs.BUILD_TYPE }}
       SAFE_VERSION: ${{ needs.versioning.outputs.SAFE_VERSION }}
+      FILE_VERSION: ${{ needs.versioning.outputs.FILE_VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -95,7 +101,7 @@ jobs:
             --windows-console-mode=disable ^
             --company-name="RIA" ^
             --product-name="TASA" ^
-            --file-version="${{ env.VERSION }}" ^
+            --file-version="${{ env.FILE_VERSION }}" ^
             --product-version="${{ env.VERSION }}" ^
             --file-description="TASA rakendus" ^
             --copyright="RIA" ^
