--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -213,6 +213,7 @@ jobs:
           python3 -m pip install --upgrade pip
           pip3 install -r requirements.txt
           pip3 install nuitka
+          pip3 install imageio
 
       - name: Build .app bundle with Nuitka
         run: |
