--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -125,6 +125,10 @@ jobs:
           path: scripts/installer.iss
           options: /DAppVersion=${{ env.VERSION }} /DSafeVersion=${{ env.SAFE_VERSION }}
 
+      - name: List files for debugging
+        run: dir /s
+        shell: cmd
+
       - name: Upload Installer artifact
         uses: actions/upload-artifact@v4
         with:
